@@ -7,6 +7,7 @@
 
 #ifndef TIMEOUT_H
 #define TIMEOUT_H
+
 	// INCLUDES:
 	#include <avr/io.h>
 	#include <avr/interrupt.h>
@@ -30,12 +31,13 @@
 	#define TIMEOUT_SLEEP_TIMER_ON()      MACROS{ TCCR1B |= ((1 << CS12) | (1 << CS10)); }MACROE
 	#define TIMEOUT_SLEEP_TIMEOUT_RESET() MACROS{ SleepTimeOutTicks = 0; TCNT1 = 0; }MACROE
 	
-	// PROTOTYPES:
-	void TOUT_SetupSleepTimer(void);
-	
 	// EXTERNAL VARIABLES:
 	extern volatile uint8_t   PacketTimeOut;
 	extern volatile uint8_t   PacketTimeOutTicks;
 	extern volatile uint16_t  SleepTimeOutTicks;
 	extern const    uint8_t   AutoSleepTOValues[5];
+
+	// PROTOTYPES:
+	void TOUT_SetupSleepTimer(void);
+		
 #endif
