@@ -49,6 +49,7 @@ Current Version: Public Release 1.4
 	  * System clock prescaling removed; buggy and wouldn't reduce power consumption anyway
 	  * USI transfer routine re-written in ASM for maximum transfer speed
 	  * OSCCAL routine changed over to a polled method rather than an interrupt method for optimal calibration
+	  * Removed excess "DataflashInfo.CurrBuffByte++;" statement from ProgDataflash.c
 
 	IN PUBLIC RELEASE 1.3:
 	=======================================
